# service-content

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml
db/changelog/: 001-table-pages.sql  002-table-content.sql  003-table-content-versions.sql
etc/: config.local.json
include/: srv-content.h  storage.h
include/srv-content/: config.h  connection.h  middleware.h  storage.h
include/srv-content/api/: save.h  view.h
include/srv-content/api/content/: save.h
include/srv-content/api/page/: save.h
include/srv-content/models/: content.h  view.h
jsonschema/api/v1/page/save/: request.json  respnose.json
jsonschema/api/v1/save/: request.json  response.json
jsonschema/api/v1/view/: request.json
src/: config.cpp  connection.cpp  main.cpp  storage.cpp
src/api/: parse_request.cpp  request_save.cpp  save.cpp
src/api/content/: error_response.cpp  parse_request.cpp
src/api/page/: error_response.cpp  parse_request.cpp  request_save.cpp  save.cpp
src/api/view/: encode_view_to_json.cpp  error_response.cpp  handler.cpp  parse_request.cpp
src/middleware/: add_server.cpp  chain.cpp
src/models/: content.cpp  view.cpp
src/storage/: get_view_by_slug.cpp  init.cpp  save_content.cpp  save_page.cpp
